--- a/src/components/Modals/FiltersModal/FiltersModal.scss
+++ b/src/components/Modals/FiltersModal/FiltersModal.scss
@@ -42,7 +42,6 @@ modal__footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-y: scroll;
 }
 
 .modal__footer {
